Don't use copy to write a variable to a file.
Even though it's basically fine here, there seem to be cases where it can
go wrong, so might as well just start using template instead.

--- a/sudoers-playbook.yml
+++ b/sudoers-playbook.yml
@@ -22,12 +22,14 @@
       when: not (nopasswd | bool)
 
     - name: Add new file to /etc/sudoers.d
-      copy:
+      template:
         dest: "/etc/sudoers.d/{{ user }}"
-        content: "{{ sudoers_line }}"
+        src: "templates/content.j2"
         validate: /usr/sbin/visudo -cf %s
         owner: root
         group: wheel
         mode: ug=r
       become: yes
+      vars:
+        content: "{{ sudoers_line }}"
 
