--- a/roles/emacs/tasks/main.yml
+++ b/roles/emacs/tasks/main.yml
@@ -2,8 +2,7 @@
 - set_fact:
     emacs_src_dir: "{{ '~/src/emacs' | expanduser }}"
     emacs_log_file: "{{ '~/var/log/emacs.log' | expanduser }}"
-    # TODO This might be different if dotfiles isn't run first. Could be a problem.
-    # TODO will annoyingly have macports paths out front if run via setup.sh.
+    # TODO This might vary between runs. Could be a problem.
     emacs_daemon_path: "{{ lookup('env', 'PATH') }}"
 
 - name: Clone emacs
