--- a/setup-playbook.yml
+++ b/setup-playbook.yml
@@ -97,21 +97,7 @@
       tags:
         - launchd
 
-    - name: Show ~/Library
-      command: chflags nohidden "{{ '~/Library' | expanduser }}"
-      tags:
-        - customize
-
-    - name: No, really, show ~/Library
-      command: SetFile -a v "{{ '~/Library' | expanduser }}"
-      tags:
-        - customize
-
-    - include_role:
-        name: defaults
-        apply:
-          tags:
-            - customize
+    - import_tasks: tasks/customize.yml
       tags:
         - customize
 
