--- a/tasks/install_apps.yml
+++ b/tasks/install_apps.yml
@@ -27,7 +27,7 @@
   include_role:
     name: r_app
 
-- name: Download and install apps from disk images
+- name: Download and install app from disk images
   include_role:
     name: install_from_dmg
   vars:
