--- a/vars/ports.yml
+++ b/vars/ports.yml
@@ -45,6 +45,7 @@ ports_to_install:
     pstree:
     python38: +optimizations
     py38-pip:
+    ripgrep:
     shellcheck:
     siege:
     tealdeer:
