--- a/roles/launchd_unload/tasks/main.yml
+++ b/roles/launchd_unload/tasks/main.yml
@@ -2,11 +2,11 @@
 ---
 - name: Check for job
   command: "launchctl list {{ launchd_label }}"
-  become: "{{ launchd_load_become | default(True) }}"
+  become: "{{ launchd_unload_become | default(True) }}"
   register: launchctl_check_result
   ignore_errors: yes
 
 - name: Unload job
   command: "launchctl unload -w {{ launchd_plist }}"
-  become: "{{ launchd_load_become | default(True) }}"
+  become: "{{ launchd_unload_become | default(True) }}"
   when: launchctl_check_result.rc != 0
