No more batcat for now. I don't want it messing with less output, but it does.

--- a/vars/ports.yml
+++ b/vars/ports.yml
@@ -11,7 +11,7 @@ ports_to_install:
     autossh:
     bash:
     bash-completion:
-    bat:
+#    bat:  # messes up less, so no good.
     bison:
     coreutils:
     cowsay:
