--- a/vars/versions.yml
+++ b/vars/versions.yml
@@ -9,7 +9,7 @@ picard_version: 2.7.3
 r_version: 4.1.3
 skim_version: 1.6.9
 terraform_version: 1.1.9
-vagrant_version: 2.2.19
+vagrant_version: "2.3.0"
 visualvm_version: 2.1.4
 vlc_version: 3.0.17.3
 xact_version: "2.50"
