Use import_tasks for this.

--- a/bootstrap-playbook.yml
+++ b/bootstrap-playbook.yml
@@ -38,6 +38,6 @@
         - always
 
     - name: Install essential ports
-      include_tasks: tasks/install_bootstrap_ports.yml
+      import_tasks: tasks/install_bootstrap_ports.yml
       tags:
         - always
