--- a/vars/versions.yml
+++ b/vars/versions.yml
@@ -4,7 +4,8 @@
 gpgtools_version: 2022.2
 iterm2_version: 3.4.18
 macports_version: 2.8.1
-node_version: 14.15.4
+node_version: 14.21.3
+node_npm_version: 9.6.2
 picard_version: 2.8.5
 r_version: 4.2.2
 skim_version: 1.6.13
