For emacs, make extraclean by default. Failures are extremely tiresome.

--- a/roles/emacs/defaults/main.yml
+++ b/roles/emacs/defaults/main.yml
@@ -4,4 +4,4 @@ emacs_bootstrap: no
 # Whether to run make distclean before configuring emacs. Mutually exclusive with extraclean.
 emacs_distclean: no
 # Whether to run make extraclean before configuring emacs. Mutually exclusive with distclean.
-emacs_extraclean: no
+emacs_extraclean: yes
