Some linter fixes.

--- a/bootstrap-playbook.yml
+++ b/bootstrap-playbook.yml
@@ -7,7 +7,7 @@
 #  3. Installs the ports required by setup-playbook. See bootstrap_ports_to_install in `vars/ports.yml` for the list.
 ---
 - hosts: localhost
-  become: no
+  become: false
   vars_files:
     - vars/ports.yml
     - vars/versions.yml
