--- a/sudoers-playbook.yml
+++ b/sudoers-playbook.yml
@@ -7,7 +7,8 @@
 #  Example -- add passwordless sudo for user Bob
 #     ansible-playbook -K sudoers-playbook.yml -e nopasswd=yes -e user=Bob
 ---
-- hosts: localhost
+- name: Add sudoers
+  hosts: localhost
   become: false
   vars:
     nopasswd: false
