Rename settings role.
Giving it one of the names ansible uses for things is probably a bad
idea. It definitely confuses the linter.

--- a/tasks/customize.yml
+++ b/tasks/customize.yml
@@ -1,7 +1,7 @@
 # Customize macOS and app settings.
 ---
 - include_role:
-    name: defaults
+    name: settings
     apply:
       tags:
         - customize
