Resolve key-order linter warnings (blocks).

--- a/roles/gnu_parallel/tasks/main.yml
+++ b/roles/gnu_parallel/tasks/main.yml
@@ -15,7 +15,7 @@
     state: directory
 
   # I'm never publishing a paper...
-- name: Silence citation warning.
+- name: Silence citation warning
   file:
     path: "{{ throwaway }}/will-cite"
     state: touch
