--- a/roles/iterm2/tasks/main.yml
+++ b/roles/iterm2/tasks/main.yml
@@ -4,7 +4,8 @@
     path: "{{ iterm2_app_path }}/{{ iterm2_app_name }}.app"
   register: throwaway
 
-- block:
+- when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
+  block:
     - name: Download iTerm2
       get_url:
         url: "https://iterm2.com/downloads/stable/iTerm2-{{ iterm2_version | replace('.', '_') }}.zip"
@@ -15,4 +16,3 @@
         src: "{{ downloads }}/iterm2.zip"
     - name: Install iTerm2
       command: "mv {{ downloads }}/{{ iterm2_app_name }}.app {{ iterm2_app_path }}"
-  when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
