--- a/roles/postman/tasks/main.yml
+++ b/roles/postman/tasks/main.yml
@@ -4,7 +4,8 @@
     path: "{{ postman_app_path }}/{{ postman_app_name }}.app"
   register: throwaway
 
-- block:
+- when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
+  block:
     - name: Download Postman
       get_url:
         url: "https://dl.pstmn.io/download/latest/osx"
@@ -15,4 +16,3 @@
         src: "{{ downloads }}/postman.zip"
     - name: Install Postman
       command: "mv {{ downloads }}/Postman.app {{ postman_app_path }}"
-  when: not (throwaway.stat.isdir is defined and throwaway.stat.isdir)
